--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ div.game-window {
     border-width: 5px;
 
     background-color: var(--off-bg, #f5f5f5);
+    z-index: 0;
 }
 
 div.ball {
@@ -61,6 +62,7 @@ div.ball {
 
     border-radius: 100%;
     background-color: var(--ball-bad, #ff0000);
+    z-index: 2;
 }
 
 div.click {
@@ -71,14 +73,64 @@ div.click {
     width: 100%;
     height: 100%;
 
-    z-index: 4;
+    z-index: 3;
 }
 
 p.msg {
     margin-top: 200px;
-    z-index: 2;
+    z-index: 3;
 
     font-size: 72px;
+}
+
+div.grid-container {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    z-index: 1;
+}
+
+div.grid-container div.grid {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 5px;
+
+    background-color: var(--border-colour, #333333);
+}
+
+div.grid-container div.grid.vert {
+    width: 5px;
+    height: 100%;
+}
+
+div.grid-container div.grid.horiz#g1 {
+    top: 116px;
+}
+div.grid-container div.grid.horiz#g2 {
+    top: 237px;
+}
+div.grid-container div.grid.horiz#g3 {
+    top: 358px;
+}
+div.grid-container div.grid.horiz#g4 {
+    top: 479px;
+}
+
+div.grid-container div.grid.vert#g1 {
+    left: 116px;
+}
+div.grid-container div.grid.vert#g2 {
+    left: 237px;
+}
+div.grid-container div.grid.vert#g3 {
+    left: 358px;
+}
+div.grid-container div.grid.vert#g4 {
+    left: 479px;
 }
 
 
@@ -115,6 +167,14 @@ div.score-container p {
     font-size: 24px;
     text-align: center;
     margin-bottom: 10px;
+}
+
+div.score-container p#highscore {
+    margin-bottom: 5px;
+}
+
+div.score-container p.mode {
+    font-size: 16px;
 }
 
 
